# knowledge-graph

./: .gitignore  ANALYSIS.md  ENTITY_TYPES_FLOW.md  QUICKSTART.md  README.md  TECHNICAL_DOCUMENTATION.md  TRIPLET_GENERATION.md  create_diagram.py  example_usage.py  image_metadata_knowledge_graph.json  pyproject.toml  requirements.txt  run.py  sample_image_metadata.json  setup.sh  test_setup.py
kg_builder/: builder.py  cfg.py  engine.py  extractor.py  relations.py  utils.py  workflow.py
kg_builder/prompts/: builder_system_prompt.txt  extractor_system_prompt.txt  prompting.py
