[build-system]
requires = ["setuptools", "setuptools-scm"]
requires-python = ">=3.12"
build-backend = "setuptools.build_meta"


[project]
name = "kg_builder"
version = "0.0.1"

dependencies = ["torch",
                "transformers",
                "google-genai",
                "accelerate",
                "sentencepiece",
                "bitsandbytes",
                "pandas",
                "langchain-community",
                "langchain-huggingface",
                "wikipedia",
                "faiss-cpu",
                "pillow",
                "networkx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kg_builder"]